updated with stellar-sdk

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "big-integer": "^1.6.44",
     "koa": "^2.7.0",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "stellar-sdk": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
