fix the render issue

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "big-integer": "^1.6.44",
     "koa": "^2.8.1",
     "koa-router": "^7.4.0",
+    "koa-views": "^6.2.0",
     "moment": "^2.24.0",
+    "path": "^0.12.7",
     "stellar-sdk": "^2.3.0"
   },
   "devDependencies": {},
