--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "koa-views": "^6.2.0",
     "md5": "^2.2.1",
     "moment": "^2.24.0",
+    "mysql": "^2.17.1",
     "node-fetch": "^2.6.0",
     "socket.io": "^2.2.0",
     "stellar-sdk": "^1.0.5"
